--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/dist/app.js": "/dist/app.js",
-    "/dist/app.css": "/dist/app.css",
-    "/dist/index.html": "/dist/index.html"
+    "/dist/app.css": "/dist/app.css"
 }
